--- a/index.html
+++ b/index.html
@@ -1,11 +1,6 @@
-<!doctype html>
-<html>
-<head>
-  <meta charset=utf-8>
-  <title>horse</title>
- <link href='https://tenor.com/view/anonymous-pepe-rare-pepe-the-matrix-pepe-matrix-gif-15409694' rel='stylesheet' type='text/css'>
-</head>
-<body>
-<h1>Sallie Gardner at a Gallop</h1>
-</body>	
-</html>
+<body style="margin: 0; padding: 0;">
+    <a href="https://tenor.com/view/anonymous-pepe-rare-pepe-the-matrix-pepe-matrix-gif-15409694" target="_blank">
+        <img src="https://example.com/your-gif-file.gif" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; object-fit: cover;">
+    </a>
+</body>
+
