--- a/index.html
+++ b/index.html
@@ -1,6 +1,2 @@
 <body style="margin: 0; padding: 0;">
-    <a href="https://tenor.com/view/anonymous-pepe-rare-pepe-the-matrix-pepe-matrix-gif-15409694" target="_blank">
-        <img src="https://example.com/your-gif-file.gif" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; object-fit: cover;">
-    </a>
-</body>
-
+<div class="tenor-gif-embed" data-postid="15409694" data-share-method="host" data-aspect-ratio="1.00946" data-width="100%"><a href="https://tenor.com/view/anonymous-pepe-rare-pepe-the-matrix-pepe-matrix-gif-15409694">Anonymous Pepe GIF</a>from <a href="https://tenor.com/search/anonymous-gifs">Anonymous GIFs</a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
