--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
 <body style="margin: 0; padding: 0;">
-<div class="tenor-gif-embed" data-postid="15409694" data-share-method="host" data-aspect-ratio="1.00946" data-width="100%"><a href="https://tenor.com/view/anonymous-pepe-rare-pepe-the-matrix-pepe-matrix-gif-15409694">Anonymous Pepe GIF</a>from <a href="https://tenor.com/search/anonymous-gifs">Anonymous GIFs</a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
+  <img src="https://media.tenor.com/images/110416d6f496eb7de99cfc8f07d57d15/tenor.gif" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; object-fit: cover;">
+</body>
