--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <body style="margin: 0; padding: 0;">
-  <img src="https://media.tenor.com/images/110416d6f496eb7de99cfc8f07d57d15/tenor.gif" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; object-fit: cover;">
+  <img src="https://tenor.com/bcOVC.gif" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; object-fit: cover;">
 </body>
